# nc-weekendpoll

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  release.yml
src/weekendpoll/: __init__.py  cli.py  client.py  dates.py  titles.py
tests/: test_client.py  test_dates.py  test_integration.py  test_prune.py  test_urls.py
