[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name uses an "nc-" prefix to signal the Nextcloud relationship,
# matching common community practice (e.g. nc-py-api, nc-mcp-server) without
# putting the registered "Nextcloud" trademark in the package name itself. The
# Nextcloud / Polls relationship is expressed descriptively (allowed nominative
# use) in the description, keywords and README. The import package and the CLI
# command remain "weekendpoll".
name = "nc-weekendpoll"
version = "0.1.1"
description = "CLI to find a free weekend via the Polls app for Nextcloud (unofficial, not affiliated with Nextcloud GmbH)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "weekendpoll contributors" }]
keywords = ["nextcloud", "polls", "scheduling", "cli", "doodle", "meeting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "requests>=2.28,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/msusky/nc-weekendpoll"
Repository = "https://github.com/msusky/nc-weekendpoll"
Issues = "https://github.com/msusky/nc-weekendpoll/issues"
Changelog = "https://github.com/msusky/nc-weekendpoll/blob/main/CHANGELOG.md"

[project.scripts]
weekendpoll = "weekendpoll.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weekendpoll"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
